crates/toml_edit/tests/snapshots/invalid/inline-table/linebreak-02.stderr
TOML parse error at line 1, column 10
  |
1 | t = {a=1,
  |          ^
newlines are unsupported in inline tables, expected nothing
